--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "qibla",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A helper class (Qibla) to provide you the qibla direction relative to True North based on provided coordinates",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "mocha -r ts-node/register",
     "build": "tsc",
-    "lint": "eslint src/**",
-    "lint-fix": "eslint src/** --fix",
+    "lint": "eslint src/** --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint"
