--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qibla",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "A helper class (Qibla) to provide you the qibla direction relative to True North based on provided coordinates",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,9 +8,8 @@
     "test": "mocha -r ts-node/register",
     "build": "tsc",
     "lint": "eslint src/** --fix",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
+    "prepare": "npm run lint && npm run build",
+    "prepublishOnly": "npm test",
     "prepare-for-publish": "npm run lint && npm run build && npm test"
   },
   "repository": {
